<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary">

    <Switch
        style="@style/match"
        android:textColor="@color/white"
        android:id="@+id/nfdSwitch"
        android:layout_gravity="center_horizontal"
        android:text="@string/nfdSwitch" />

    <Button android:id="@+id/send" android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send"/>

    <LinearLayout style="@style/match">
        <TextView style="@style/wrap" android:textColor="@color/white" android:text="@string/uptime"/>
        <TextView style="@style/field" android:textColor="@color/white" android:id="@+id/uptime" android:text="@string/notAvailable"/>
    </LinearLayout>

    <LinearLayout style="@style/match">
        <TextView style="@style/wrap" android:textColor="@color/white" android:text="@string/umobileUuid"/>
        <TextView style="@style/field" android:textColor="@color/white" android:id="@+id/umobileUuid" android:text="@string/notAvailable"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

</LinearLayout>