<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/interestNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_name"
        app:layout_constraintBottom_toTopOf="@+id/long_lived"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/interestName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/interestName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ndn_opp_prefix"
        app:layout_constraintBottom_toTopOf="@+id/long_lived"
        app:layout_constraintLeft_toRightOf="@+id/interestNameTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/long_lived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/long_lived_interest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestName"/>

</android.support.constraint.ConstraintLayout>