<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/dataNameTitle"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/interest_name"
                  android:textAllCaps="true"
                  android:textColor="@color/black"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginLeft="8dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/dataName"
                  android:layout_marginStart="8dp"
                  android:layout_marginRight="8dp"
                  app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/dataName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ndn_opp_prefix"
            app:layout_constraintTop_toBottomOf="@+id/dataNameTitle"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dataContentTitle"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView android:id="@+id/dataContentTitle"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/content"
                  android:textAllCaps="true"
                  android:textColor="@color/black"
                  app:layout_constraintTop_toBottomOf="@+id/dataName"
                  android:layout_marginRight="8dp"
                  app:layout_constraintRight_toRightOf="parent"
                  android:layout_marginLeft="8dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/dataContent"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"/>

        <EditText android:id="@+id/dataContent"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/dataContentTitle"
                  android:layout_marginRight="8dp"
                  app:layout_constraintRight_toRightOf="parent"
                  android:layout_marginLeft="8dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/pushed_data"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"/>

        <CheckBox
            android:id="@+id/pushed_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/pushed_data"
            app:layout_constraintTop_toBottomOf="@+id/dataContent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>